--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "directories": {
     "test": "test",
     "lib": "lib",
-    "doc":"doc",
+    "doc": "doc",
     "example": "example"
   },
   "files": [
@@ -20,7 +20,7 @@
     "example/"
   ],
   "scripts": {
-    "test": "gulp test",
+    "test": "jest",
     "prepublish": "gulp"
   },
   "repository": {
@@ -49,19 +49,27 @@
   "dependencies": {
     "async": "^0.9.0",
     "chalk": "^0.5.1",
-    "hexastore": "^0.1.2",
+    "hexastore": "^0.1.4",
+    "lodash": "^3.9.3",
     "minimist": "^1.1.0"
   },
   "devDependencies": {
+    "chai": "^1.10.0",
     "del": "^1.1.1",
-    "gulp": "^3.8.10",
-    "gulp-coverage": "^0.3.32",
-    "gulp-merge": "^0.1.0",
+    "escodegen": "^1.4.3",
+    "esprima": "^2.1.0",
+    "gulp": "^3.8.11",
+    "gulp-istanbul": "^0.5.0",
     "gulp-mocha": "^2.0.0",
     "gulp-newer": "^0.5.0",
     "gulp-peg": "^0.1.2",
+    "gulp-plumber": "^0.6.6",
+    "istanbul": "^0.3.5",
+    "jest-cli": "^0.4.1",
     "mocha": "^2.1.0",
-    "mocha-lcov-reporter": "0.0.1",
     "pegjs": "^0.8.0"
+  },
+  "jest": {
+     "collectCoverage": true
   }
 }
