--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "esprima": "^2.1.0",
     "gulp": "^3.8.11",
     "gulp-istanbul": "^0.5.0",
+    "gulp-jest": "^0.4.0",
     "gulp-mocha": "^2.0.0",
     "gulp-newer": "^0.5.0",
     "gulp-peg": "^0.1.2",
@@ -70,6 +71,6 @@
     "pegjs": "^0.8.0"
   },
   "jest": {
-     "collectCoverage": true
+    "collectCoverage": true
   }
 }
