--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iii",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "The interactive interacting interactors framework",
   "main": "index.js",
   "scripts": {
@@ -35,13 +35,13 @@
     "chalk": "^0.5.1",
     "hexastore": "^0.1.4",
     "lodash": "^3.9.3",
-    "minimist": "^1.1.0"
+    "minimist": "^1.1.0",
+    "escodegen": "^1.4.3",
+    "esprima": "^2.1.0"
   },
   "devDependencies": {
     "chai": "^1.10.0",
     "del": "^1.1.1",
-    "escodegen": "^1.4.3",
-    "esprima": "^2.1.0",
     "gulp": "^3.8.11",
     "gulp-istanbul": "^0.5.0",
     "gulp-jest": "^0.4.0",
