--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "chai": "^1.10.0",
+    "circular-json": "^0.1.6",
     "del": "^1.1.1",
     "gulp": "^3.8.11",
     "gulp-istanbul": "^0.5.0",
@@ -51,6 +52,7 @@
     "gulp-plumber": "^0.6.6",
     "istanbul": "^0.3.5",
     "jest-cli": "^0.4.1",
+    "json-stringify-safe": "^5.0.1",
     "mocha": "^2.1.0",
     "pegjs": "^0.8.0"
   },
