--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "minimist": "^1.1.0"
   },
   "devDependencies": {
+    "browserify": "^11.0.0",
     "chai": "^1.10.0",
     "circular-json": "^0.1.6",
     "del": "^1.1.1",
@@ -50,11 +51,16 @@
     "gulp-newer": "^0.5.0",
     "gulp-peg": "^0.1.2",
     "gulp-plumber": "^0.6.6",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^1.2.0",
+    "gulp-util": "^3.0.6",
     "istanbul": "^0.3.5",
     "jest-cli": "^0.4.1",
     "json-stringify-safe": "^5.0.1",
     "mocha": "^2.1.0",
-    "pegjs": "^0.8.0"
+    "pegjs": "^0.8.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   },
   "jest": {
     "collectCoverage": true,
