--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iii",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "The interactive interacting interactors framework",
   "main": "index.js",
   "scripts": {
@@ -33,16 +33,18 @@
   "dependencies": {
     "async": "^0.9.0",
     "chalk": "^0.5.1",
+    "dependency-graph": "^0.4.0",
     "escodegen": "^1.4.3",
     "esprima": "^2.1.0",
     "factis": "^1.0.3",
     "lodash": "^3.9.3",
-    "minimist": "^1.1.0"
+    "minimist": "^1.1.0",
+    "json-stringify-safe": "^5.0.1",
+    "circular-json": "^0.1.6"
   },
   "devDependencies": {
     "browserify": "^11.0.0",
     "chai": "^1.10.0",
-    "circular-json": "^0.1.6",
     "del": "^1.1.1",
     "gulp": "^3.8.11",
     "gulp-istanbul": "^0.5.0",
@@ -56,7 +58,6 @@
     "gulp-util": "^3.0.6",
     "istanbul": "^0.3.5",
     "jest-cli": "^0.4.1",
-    "json-stringify-safe": "^5.0.1",
     "mocha": "^2.1.0",
     "pegjs": "^0.8.0",
     "vinyl-buffer": "^1.0.0",
