--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iii",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "The interactive interacting interactors framework",
   "main": "index.js",
   "scripts": {
@@ -33,14 +33,14 @@
   "dependencies": {
     "async": "^0.9.0",
     "chalk": "^0.5.1",
-    "dependency-graph": "^0.4.0",
+    "circular-json": "^0.1.6",
+    "dependency-graph": "^0.4.1",
     "escodegen": "^1.4.3",
     "esprima": "^2.1.0",
     "factis": "^1.0.3",
-    "lodash": "^3.9.3",
-    "minimist": "^1.1.0",
     "json-stringify-safe": "^5.0.1",
-    "circular-json": "^0.1.6"
+    "lodash": "^3.9.3",
+    "minimist": "^1.1.0"
   },
   "devDependencies": {
     "browserify": "^11.0.0",
